overflow scroll fix, resume added

--- a/stylesheets/desktop.css
+++ b/stylesheets/desktop.css
@@ -12,6 +12,8 @@ body {
     font: inherit;
     font-family: 'Audiowide', cursive;
     color: white;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 #konamiVideo {
